# gradata

./: .agentignore  .claudeignore  .coderabbit-review.md  .continue-here.md  .dockerignore  .gitignore  .gitleaks.toml  .gitnexusignore  .mcp.json  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  FEATURES.md  FIX-PLAN.md  LICENSE  LICENSE-NOTICE.md  README.md  autoresearch-results.tsv  context-manifest.md  greptile-review.md  launch-reviewer.ps1  launch.ps1  launch.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  soul.md
cloud/: .env.example  Dockerfile  OPS.md  RAILWAY-ENV.md  RUNBOOK-INCIDENT.md  SENTRY-SETUP.md  SUPABASE-SETUP.md  pyproject.toml  railway.toml
cloud/app/: __init__.py  auth.py  config.py  db.py  main.py  middleware.py  models.py  rate_limit.py  sentry_init.py
cloud/app/routes/: __init__.py  activity.py  analytics.py  api_keys.py  billing.py  brains.py  corrections.py  gdpr.py  health.py  lessons.py  meta_rules.py  operator.py  proof.py  public.py  rule_patches.py  sync.py  team.py  telemetry.py  users.py
cloud/dashboard/: .env.example  .gitignore  CLOUDFLARE-PAGES.md  SOURCE-MAPS.md  index.html  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
cloud/dashboard/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
cloud/dashboard/public/: _headers  _redirects  robots.txt
cloud/dashboard/src/: App.tsx  index.css  main.tsx
cloud/dashboard/tests/: ActiveRulesPanel.test.tsx  ActivityFeed.test.tsx  CategoriesChart.test.tsx  ClearDemoButton.test.tsx  CorrectionDecayCurve.test.tsx  GraduationProgressBar.test.tsx  KpiStrip.test.tsx  MetaRulesGrid.test.tsx  OperatorPage.test.tsx  PlanBadge.test.tsx  PlanGate.test.tsx  TeamLeaderboard.test.tsx  analytics-client.test.ts  dashboard-page.test.tsx  operator.test.ts  proof.test.tsx  setup.ts  team.test.ts
cloud/data/: proof_results.json
cloud/infra/: cf_worker_api_proxy.js
cloud/loadtest/: README.md
cloud/loadtest/k6/: authed-read.js  baseline.js  spike.js  sync-write.js
cloud/migrations/: 001_initial_schema.sql  002_notification_prefs.sql  003_workspace_invites.sql  004_seed_demo_brain.sql  005_lessons_unique_constraint.sql  005_processed_webhooks.sql  005_soft_delete.sql  006_soft_delete.sql  006_telemetry_events.sql  007_telemetry_events.sql
cloud/scripts/: export_ab_proof.py
cloud/supabase/email-templates/: README.md  change-email.html  confirm-signup.html  invite-user.html  magic-link.html  reauthentication.html  reset-password.html
cloud/tests/: __init__.py  conftest.py  test_auth.py  test_billing.py  test_brains.py  test_db_guards.py  test_gdpr.py  test_health.py  test_models.py  test_new_endpoints.py  test_new_routes.py  test_notifications.py  test_operator.py  test_proof.py  test_rate_limit.py  test_seed_demo.py  test_sentry.py  test_sync.py  test_team.py  test_telemetry.py
sdk/: .gitignore  AUDIT.md  CHANGELOG.md  CONTINUATION.md  CONTRIBUTING.md  GATE0-PROOF.md  LICENSE  PYPI-SETUP.md  README.md  RELEASE.md  ROADMAP.md  SPEC.md  V1_SHIP_INVENTORY.md  brain.manifest.json  mkdocs.yml  onboarding.md  pyproject.toml  workflow-detection.md
sdk/.planning/research/: ARCHITECTURE.md  FEATURES.md  IP-PROTECTION-ARCHITECTURE.md  IP-PROTECTION-COMPARISON.md  IP-PROTECTION-FEATURES.md  IP-PROTECTION-MODELS.md  IP-PROTECTION-PITFALLS.md  IP-PROTECTION-SUMMARY.md  LEGAL-IP-FRAMEWORK.md  PITFALLS.md  STACK.md  SUMMARY.md
sdk/aios_brain/: __init__.py  _brain_manifest.py  _config.py  _context_compile.py  _context_packet.py  _data_flow_audit.py  _doctor.py  _embed.py  _events.py  _export_brain.py  _fact_extractor.py  _installer.py  _paths.py  _query.py  _self_improvement.py  _stats.py  _tag_taxonomy.py  _validator.py  brain.py  cli.py  onboard.py
sdk/docs/: META_LEARNING.md  index.md  requirements.txt  study-protocol.md
sdk/docs/api/: brain.md  cli.md  enhancements.md  patterns.md
sdk/docs/architecture/: agent-graduation.md  brain.md  enhancements.md  learning-proxy.md  overview.md  patterns.md
sdk/docs/cloud/: api.md  marketplace.md  overview.md  quickstart.md
sdk/docs/getting-started/: claude-code-setup.md  install.md  quickstart.md
sdk/docs/guides/: agent-graduation.md  custom-domains.md  mcp.md  training.md
sdk/examples/: quickstart.py
sdk/onboarding/: flow.md  wizard.md
sdk/onboarding/role-templates/: sales.md
sdk/research/: academic-validation-landscape.md  domain-agnostic-patterns.md  mem0-letta-deep-research.md
sdk/scripts/: autoresearch_harness.py  density_graph.py  fix_density_anomalies.py  program.md
sdk/src/gradata/: __init__.py  _brain_cloud.py  _brain_events.py  _brain_export.py  _brain_learning.py  _brain_manifest.py  _brain_pipeline.py  _brain_quality.py  _brain_search.py  _config.py  _context_compile.py  _context_packet.py  _data_flow_audit.py  _diff_engine.py  _doctor.py  _edit_classifier.py  _embed.py  _events.py  _export_brain.py  _fact_extractor.py  _failure_detectors.py  _installer.py  _metrics.py  _migrations.py  _paths.py  _pattern_extractor.py  _query.py  _rule_engine.py  _rule_tracker.py  _scope.py  _stats.py  brain.py  (+11 more)
sdk/templates/: agentignore  company.md  lessons.md  soul.md  task-queue.md
sdk/tests/: audit_data_flow.py  test_10k_stress.py  test_adaptations.py  test_agent_graduation.py  test_brain.py  test_bug_fixes.py  test_call_profile.py  test_coverage_gaps.py  test_decay_distill.py  test_enhancements.py  test_integrations.py  test_live_brain_stress.py  test_llm_pipeline_stress.py  test_loop_and_security.py  test_loop_intelligence.py  test_mcp_server.py  test_meta_rules.py  test_multi_brain_simulation.py  test_pattern_graduation_integration.py  test_patterns.py  test_prove_and_export.py  test_rule_engine_v2.py  test_rule_verifier.py  test_severity_weighting.py  test_spawn_extraction.py  test_spec_compliance.py  test_steals.py  test_swe_bench.py  test_tone_profile.py  test_wave1.py
sdk/workflows/: detection-log.md
(+1846 files in other folders)
