[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aios-brain"
version = "0.1.0"
description = "Personal AI Brain SDK — build, train, and share AI brains that compound knowledge over time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Oliver", email = "oliver@spritesai.com" },
]
keywords = ["ai", "brain", "sdk", "memory", "agents", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
local = []  # chromadb includes sentence-transformers as transitive dep
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "bandit>=1.7",
]

[project.scripts]
aios-brain = "aios_brain.cli:main"

[project.urls]
Homepage = "https://github.com/spritesai/aios-brain"
Documentation = "https://github.com/spritesai/aios-brain#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/aios_brain"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.isort]
known-first-party = ["aios_brain"]

# --- Pyright (type checker) ---
[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = "warning"
reportMissingTypeStubs = false

# --- Bandit (security linter) ---
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # allow assert in non-test code for now

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
